# knowcode

./: .gitignore  README.md  know.spec  knowcode.iss  pyproject.toml
.github/workflows/: build-executables.yml  publish.yml
docs/: Architectural Patch v1.md  Implementation_Decisions.md  Introduction.md  Parser_implementation plan.md  Runtime_Implementation.md  Structural_engine_implementation.md
npm/knowcode/: package.json
src/runtime/: __init__.py
src/runtime/artifact/: __init__.py  builder.py
src/runtime/cli/: __init__.py  animation.py  app.py  auth.py  telemetry.py
src/runtime/exceptions/: __init__.py  errors.py
src/runtime/repository/: __init__.py  discovery.py  models.py  paths.py  validator.py
src/runtime/services/: __init__.py  ingest_service.py  init_service.py  semantic_sync_service.py  status_service.py  sync_service.py
src/runtime/templates/: BRAIN.md.j2  KNOWCODE.md.j2  KNOWCODE_LOADER.md.j2  README_KNOWLEDGE.md.j2  __init__.py  active_context.md.j2  context_tracker.md.j2  example-skill.md.j2  example-workflow.md.j2  ingest_legacy.md.j2  raw_readme.md.j2  sync_reconciliation.md.j2  synthesize_knowledge.md.j2  track_intent.md.j2
src/structural_engine/: __init__.py  engine.py  results.py
src/structural_engine/diff/: __init__.py  generator.py  models.py
src/structural_engine/logs/: __init__.py  generator.py
src/structural_engine/parser/: __init__.py  discovery.py  models.py  parser.py
tests/: test_phase1.py  test_phase2a.py  test_phase2b.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
(+16 files in other folders)
