[project]
name = "knowiki"
version = "0.1.0"
description = "Structural cognition engine for code repositories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "rich>=14.0.0",
    "pydantic>=2.11.0",
    "ruamel.yaml>=0.18.0",
    "jinja2>=3.1.0",
    "structlog>=25.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "platformdirs>=4.0.0",
]

[project.scripts]
brain = "runtime.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runtime", "src/structural_engine"]
